[gd_scene load_steps=2 format=3 uid="uid://dr0frejjolbwb"]

[ext_resource type="Script" path="res://game/cave_segment/cave_segment.gd" id="1_xxwvy"]

[node name="CaveSegment" type="CharacterBody2D"]
script = ExtResource("1_xxwvy")

[node name="SegmentLeft" type="Polygon2D" parent="."]

[node name="SegmentRight" type="Polygon2D" parent="."]

[node name="CollisionSegmentLeft" type="CollisionPolygon2D" parent="."]

[node name="CollisionSegmentRight" type="CollisionPolygon2D" parent="."]
